<resources>
    <string name="app_name">HalaTask</string>
    <string name="role">Role</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="education">Education</string>
    <string name="birth_date">Birth Date</string>
    <string name="country">Country</string>
    <string name="callMustEnabled">For calling a contact, please enable call phone permission</string>
    <string name="listScreenName">Senators</string>
    <string name="contactDetailsScreenName">Contact Details</string>
</resources>